name:               guide
version:            0.0.1
license:            AllRightsReserved
author:             Ambiata <info@ambiata.com>
copyright:          (c) 2015 Ambiata
cabal-version:      >= 1.18
build-type:         Simple

executable guide
  default-language: Haskell2010
  main-is:          guide.hs
  build-depends:
                    base                            >= 3          && < 5
                    , filepath                      == 1.3.*
                    , hakyll                        == 4.6.*

  ghc-options:
                    -Wall -O2 -threaded
